feat(sales-outbound): 支持部分出库（累计覆盖）
销售出库覆盖由整单精确改为按明细累计：同一订单可开多张出库，任一行累计出库量不得超过订单数量，超量拒绝并提示剩余可用；移除已被引用即硬性占用；出库来源候选人改为包含尚未出满的订单；销售订单明细新增只读 outboundRemainingQuantity。部分出库不影响完成同步（全部出满才推进交付核定）。